# GAM

./: .gitignore  CMakeLists.txt  Mesh_Computational_Geometry.pro  README ancien.md  README.md  helper.py
data/: bunny.off  bunny2d.xy  cube.off
include/: algorithm.h  color.h  gldisplaywidget.h  laplacien.h  mesh.h  point.h  topography.h
src/: algorithm.cpp  gldisplaywidget.cpp  laplacien.cpp  main.cpp  mainwindow.ui  mesh.cpp  mesh_reconstruction.cpp  mesh_refinement.cpp  mesh_triangulation.cpp  point.cpp  test_mesh.cpp  topography.cpp
